[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Enemies/MMDG-1.png (1).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies_Fazzi/Boss_4.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.3226, 15.3184 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.1154, 17.0044 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.44403, -322.582 ), Vector2( 426.858, -322.582 ), Vector2( 895.911, -325.232 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 899.258, -44.7025 ), Vector2( 451.406, -55.3025 ), Vector2( -17.2686, -37.8882 ), Vector2( 426.988, -36.3739 ), Vector2( 921.594, -35.3896 ) ]
}

[node name="Boss_4_Root" type="Node2D"]
position = Vector2( -1.496, -1.069 )
script = ExtResource( 2 )

[node name="Boss_4_Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( 407.012, -79.2072 )
scale = Vector2( 58.1767, 44.8275 )

[node name="Boss_4_KinematicBody" type="KinematicBody2D" parent="."]
position = Vector2( -2.44403, -322.582 )
scale = Vector2( 3, 2.5 )
collision_layer = 2
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="Boss_4_Sprite" type="Sprite" parent="Boss_4_KinematicBody"]
modulate = Color( 0.0117647, 0.105882, 0.270588, 1 )
scale = Vector2( 1, 1.19048 )
texture = ExtResource( 1 )

[node name="Boss_4_Col" type="CollisionShape2D" parent="Boss_4_KinematicBody"]
scale = Vector2( 1, 1.19048 )
shape = SubResource( 1 )

[node name="Boss_4_Hit" type="Area2D" parent="Boss_4_KinematicBody"]
scale = Vector2( 1, 1.19048 )
collision_layer = 2
collision_mask = 4

[node name="Boss_4_Col_Hit" type="CollisionShape2D" parent="Boss_4_KinematicBody/Boss_4_Hit"]
shape = SubResource( 2 )

[node name="Boss_4_Animation" type="AnimationPlayer" parent="Boss_4_KinematicBody"]
anims/move = SubResource( 3 )

[node name="Boss_4_KinematicBody_2" type="KinematicBody2D" parent="."]
position = Vector2( 899.258, -44.7025 )
scale = Vector2( 1.4, 1.4 )
collision_layer = 2
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="Boss_4_Sprite" type="Sprite" parent="Boss_4_KinematicBody_2"]
modulate = Color( 0.192157, 0.00392157, 0.00392157, 1 )
scale = Vector2( 1, 1.19048 )
texture = ExtResource( 1 )

[node name="Boss_4_Col" type="CollisionShape2D" parent="Boss_4_KinematicBody_2"]
scale = Vector2( 1, 1.19048 )
shape = SubResource( 1 )

[node name="Boss_4_Hit" type="Area2D" parent="Boss_4_KinematicBody_2"]
scale = Vector2( 1, 1.19048 )
collision_layer = 2
collision_mask = 4

[node name="Boss_4_Col_Hit" type="CollisionShape2D" parent="Boss_4_KinematicBody_2/Boss_4_Hit"]
shape = SubResource( 2 )

[node name="Boss_4_Animation" type="AnimationPlayer" parent="Boss_4_KinematicBody_2"]
anims/move = SubResource( 4 )
[connection signal="area_entered" from="Boss_4_KinematicBody/Boss_4_Hit" to="." method="_on_Boss_4_Hit_area_entered"]
